# USB_Redirect_For_Termux

./: .gitlab-ci.yml  ChangeLog.md  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt
build-aux/: oss-fuzz.sh
docs/: Makefile.am
fuzzing/: Makefile.am  meson.build  usbredirparserfuzz.cc
tests/: filter.c
tools/: Makefile.am  usbredirect.c
usbredirhost/: Makefile.am  meson.build  usbredirhost.c  usbredirhost.h
usbredirparser/: Makefile.am  meson.build  usbredirfilter.c  usbredirfilter.h  usbredirparser.c  usbredirparser.h  usbredirparser.map
usbredirserver/: Makefile.am
usbredirtestclient/: Makefile.am  usbredirtestclient.c
