option('git_werror',
    type: 'feature',
    value: 'auto',
    description: 'use -Werror if building from GIT')

option('llvm-fuzz',
    type : 'feature',
    value : 'auto',
    description : 'Enable libFuzzer integration')

option('tools',
    type : 'feature',
    value : 'enabled',
    description : 'Build usbredir\'s tools such as usbredirect')
